tests/snapshots/conformance_golden_suite__golden_capability_negotiation_all_satisfied.snap
---
source: tests/conformance_golden_suite.rs
expression: snapshot
---
{
  "bonus": [
    "extended_thinking"
  ],
  "is_compatible": true,
  "satisfied": [
    "streaming",
    "tool_read"
  ],
  "unsatisfied": []
}
