tests/snapshots/conformance_golden_suite__golden_capability_negotiation_emulated_meets_emulated.snap
---
source: tests/conformance_golden_suite.rs
expression: snapshot
---
{
  "bonus": [],
  "is_compatible": true,
  "satisfied": [
    "tool_write"
  ],
  "unsatisfied": []
}
