tests/snapshots/conformance_golden_suite__golden_capability_negotiation_unsatisfied.snap
---
source: tests/conformance_golden_suite.rs
expression: snapshot
---
{
  "bonus": [],
  "is_compatible": false,
  "satisfied": [
    "streaming"
  ],
  "unsatisfied": [
    "logprobs"
  ]
}
