tests/snapshots/conformance_golden_suite__golden_config_parse_minimal.snap
---
source: tests/conformance_golden_suite.rs
expression: config
---
{
  "backends": {
    "mock": {
      "type": "mock"
    }
  }
}
