tests/snapshots/conformance_golden_suite__golden_envelope_fatal_with_code.snap
---
source: tests/conformance_golden_suite.rs
expression: env
---
{
  "t": "fatal",
  "ref_id": "run-golden",
  "error": "sidecar process exited",
  "error_code": "backend_crashed"
}
