tests/snapshots/conformance_golden_suite__golden_envelope_fatal_without_ref.snap
---
source: tests/conformance_golden_suite.rs
expression: env
---
{
  "t": "fatal",
  "ref_id": null,
  "error": "startup failure"
}
